--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.2.0",
     "bootstrap": "^5.2.3",
+    "randomcolor": "^0.6.2",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-lottie": "^1.2.3",
     "react-scripts": "5.0.1",
     "sass": "^1.58.0",
     "web-vitals": "^2.1.4"
